# chatgpt-prototyping

./: .env.example  .gitignore copy  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/api/: chatgpt.py
